--- a/index.html
+++ b/index.html
@@ -3,7 +3,64 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>het</title>
+    <title>Het Test</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="head"></div>
+      <div class="title"></div>
+      <div class="images1">
+        <div class="image1_1"></div>
+        <div class="image1_2"></div>
+      </div>
+      <div class="title2"></div>
+      <div class="images2">
+        <div class="image2_1"></div>
+        <div class="image2_2"></div>
+        <div class="image2_3"></div>
+        <div class="image2_4"></div>
+      </div>
+
+      <div class="images3">
+        <div class="image3_1"></div>
+        <div class="image3_2"></div>
+        <div class="image3_3"></div>
+        <div class="image3_4"></div>
+      </div>
+      <div class="title3"></div>
+      <div class="box">
+        <div class="column">
+          <div class="main1"></div>
+          <div class="main2"></div>
+          <div class="main3"></div>
+        </div>
+        <div class="column">
+          <div class="main1"></div>
+          <div class="main2"></div>
+          <div class="main3"></div>
+        </div>
+        <div class="column">
+          <div class="main1"></div>
+          <div class="main2"></div>
+          <div class="main3"></div>
+        </div>
+      </div>
+      <div class="title4"></div>
+      <div class="title5"></div>
+      <div class="title6"></div>
+      <div class="title7"></div>
+      <div class="title8"></div>
+      <div class="boximg">
+        <div class="img1"></div>
+        <div class="img2"></div>
+      </div>
+      <div class="last">
+        <div class="lastimg">
+          <div class="lastimg1"></div>
+          <div class="lastimg2"></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
