--- a/index.html
+++ b/index.html
@@ -8,59 +8,61 @@
   </head>
   <body>
     <div class="container">
-      <div class="head"></div>
-      <div class="title"></div>
-      <div class="images1">
-        <div class="image1_1"></div>
-        <div class="image1_2"></div>
-      </div>
-      <div class="title2"></div>
-      <div class="images2">
+      <header>
+        <nav class="navbar"></nav>
+        <section class="title"></section>
+      </header>
+      <article class="imagecontainer1">
+        <section class="image1_1"></section>
+        <section class="image1_2"></section>
+      </article>
+      <section class="title2"></section>
+      <article class="gallery1">
         <div class="image2_1"></div>
         <div class="image2_2"></div>
         <div class="image2_3"></div>
         <div class="image2_4"></div>
-      </div>
+      </article>
 
-      <div class="images3">
+      <section class="gallery2">
         <div class="image3_1"></div>
         <div class="image3_2"></div>
         <div class="image3_3"></div>
         <div class="image3_4"></div>
-      </div>
+      </section>
       <div class="title3"></div>
       <div class="box">
         <div class="column">
-          <div class="main1"></div>
-          <div class="main2"></div>
-          <div class="main3"></div>
+          <div class="top"></div>
+          <div class="middle"></div>
+          <div class="bottom"></div>
         </div>
         <div class="column">
-          <div class="main1"></div>
-          <div class="main2"></div>
-          <div class="main3"></div>
+          <div class="top"></div>
+          <div class="middle"></div>
+          <div class="bottom"></div>
         </div>
         <div class="column">
-          <div class="main1"></div>
-          <div class="main2"></div>
-          <div class="main3"></div>
+          <div class="top"></div>
+          <div class="middle"></div>
+          <div class="bottom"></div>
         </div>
       </div>
-      <div class="title4"></div>
-      <div class="title5"></div>
-      <div class="title6"></div>
-      <div class="title7"></div>
-      <div class="title8"></div>
-      <div class="boximg">
-        <div class="img1"></div>
-        <div class="img2"></div>
-      </div>
-      <div class="last">
-        <div class="lastimg">
-          <div class="lastimg1"></div>
-          <div class="lastimg2"></div>
+      <section class="title4"></section>
+      <section class="title5"></section>
+      <section class="title6"></section>
+      <section class="title7"></section>
+      <section class="title8"></section>
+      <section class="button">
+        <div class="button1"></div>
+        <div class="button2"></div>
+      </section>
+      <footer class="footer">
+        <div class="footerblock">
+          <div class="footerimg1"></div>
+          <div class="footerimg2"></div>
         </div>
-      </div>
+      </footer>
     </div>
   </body>
 </html>
